--- a/estilos/media-pros.css
+++ b/estilos/media-pros.css
@@ -8,11 +8,11 @@
         width: 100%;
         display: block;
     }
-    ol, ul{
+    ol{
         width: auto;
         margin-left: 15px;
-        margin-right: 15px;
-        padding-left: 5px;
+        margin-right: 20px;
+        padding-left: 10px;
     }
     li{
         width: auto;
