--- a/estilos/media-pros.css
+++ b/estilos/media-pros.css
@@ -9,6 +9,7 @@
         width: auto;
         margin-left: 15px;
         margin-right: 15px;
+        padding-right: 10px;
     }
     li{
         width: 90%;
